<resources>
    <string name="app_name">Point of Sales</string>
    <string name="mini_pos_log_in">MINI POS LOG IN</string>
    <string name="user">user</string>
    <string name="e_g_john123">e.g: john123</string>
    <string name="user_name_hint_login_page">user name</string>
    <string name="password_hint_login_page">Password</string>
    <string name="log_in_button_text">Log In</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="user_name_or_password_is_empty">User name or password is empty</string>
    <string name="log_in_success">Log in Success!</string>
    <string name="user_name_or_password_is_wrong">User name or Password is wrong!</string>
    <string name="mini_pos_register">MINI POS Register</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="new_password">New Password</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="register">Register</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="add_stock">+ STOCK</string>
    <string name="new_bill">NEW BILL</string>
    <string name="stock_view">VIEW STOCK</string>
    <string name="add_product">+ PRODUCT</string>
    <string name="category">CATEGORY</string>
    <string name="reports">REPORTS</string>
    <string name="add_category">+ CATEGORY</string>
    <string name="view_category">VIEW CATEGORY</string>
    <string name="view_products">VIEW PRODUCTS</string>
    <string name="return_refund">RETURN/REFUND</string>
    <string name="view_promotion">VIEW PROMOTION</string>
    <string name="promotion">+ PROMOTION</string>
    <string name="log_out">Log Out</string>
    <string name="add_category_text">ADD CATEGORY</string>
    <string name="enter_new_category">Enter New Category</string>
    <string name="enter_category_description">Enter Category Description</string>
    <string name="add">Add</string>
    <string name="categories_in_shop">CATEGORIES IN SHOP</string>
    <string name="edit_category">Edit Category</string>
    <string name="category_id">Category ID</string>
    <string name="edit_or_delete_category">EDIT OR DELETE CATEGORY</string>
    <string name="edit_category_description">Edit Category Description</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="add_product_text">ADD PRODUCT</string>
    <string name="enter_product_description">Enter Product Description</string>
    <string name="products_in_shop">PRODUCTS IN SHOP</string>
    <string name="enter_new_product">Enter New Product</string>
    <string name="product">PRODUCT</string>
    <string name="barcode">Barcode</string>
    <string name="stock_price">Enter Buying Price</string>
    <string name="buy_price">Enter Buying Price</string>
    <string name="sell_price">Enter Selling Price</string>
    <string name="add_to">Add To</string>
    <string name="finish_add">Finish Add</string>
    <string name="add_stock_h">ADD STOCK</string>
    <string name="new_item">Another</string>
    <string name="ex_date">Enter Exp Date</string>
    <string name="qty">Quantity</string>
    <string name="stock_details">STOCK DETAILS</string>
    <string name="date">Date</string>
    <string name="suplier">Supplier Name</string>
    <string name="total_value">Total Value</string>
    <string name="pay_date">Pay Date</string>
    <string name="next">Next</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
</resources>