<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddStock"
    android:orientation="vertical"
    android:gravity="center">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_stock_h"
            android:textSize="24sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/barCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/barcode"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/editTextHintColor"
            android:textSize="20sp"
            android:autofillHints="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/product"/>

        <Spinner
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:id="@+id/prodSpinner" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/buyPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/buy_price"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/sellPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/sell_price"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />



    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/expireDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/ex_date"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/qty"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />



    </LinearLayout>








    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addstockButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/new_item"
            android:textColor="@color/dark_aqua"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/cancelStockButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel_button_text"
            android:textColor="@color/dark_crimson"
            android:shadowColor="@color/black"/>

        <Button
            android:id="@+id/finishAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/finish_add"
            android:textColor="@color/dark_crimson"
            android:shadowColor="@color/normal_blue"/>

    </LinearLayout>



</LinearLayout>