<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".register">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mini_pos_register"
            android:textAlignment="center"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_registrer"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/enter_new_username"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/editTextHintColor"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="10"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/new_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="@color/editTextHintColor"
            android:textSize="20sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reTypePassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_weight="10"
                android:height="48sp"
                android:ems="12"
                android:hint="@string/retype_new_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/editTextHintColor"
                android:textSize="20sp" />
        </LinearLayout>




    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/register"
            android:id="@+id/registerButton"
            android:textColor="@color/dark_aqua"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancel_button_text"
            android:id="@+id/cancelRegister"
            android:textColor="@color/dark_crimson"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/log_in_button_text"
            android:id="@+id/toLogin"
            android:textColor="@color/dark_aqua"/>


    </LinearLayout>




</LinearLayout>