<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".login">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mini_pos_log_in"
        android:textSize="24sp">

    </TextView>

</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/user_name_hint_login_page"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:height="48sp"
            android:ems="12"
            android:hint="@string/password_hint_login_page"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#A1887F"
            android:textSize="20sp"
            android:autofillHints="" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_button_text"
            android:id="@+id/login_button"
            android:background="@color/primary_purple"
            android:layout_marginTop="16dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button_text"
            android:id="@+id/cancel_button"
            android:background="@color/light_maroon"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="24dp"/>

    </LinearLayout>




</LinearLayout>